--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 84%;
+  margin: auto;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.medium-heading{
+color: #88b904;
 }
+.home-left{
+  display: flex;
+  align-items: center;
+  /* color: #002d5b; */
+  width: 510px;
+}
+.home-right{
+  width: 430px;
+}
+.home-right>img{
+  width: 100%;
+}
+.left-icons{
+  height: 75%;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  padding: 1px 12px;
+  cursor: pointer;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.left-content{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 14px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
